--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "jwt-check-expiration": "^1.0.5",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
+    "react-datepicker": "^4.16.0",
     "react-dom": "^18.2.0",
     "react-responsive": "^9.0.2",
     "react-router-dom": "^6.14.2",
